--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,23 @@
 {
   "development": {
-    "username": "root",
-    "password": "root",
+    "username": "abim",
+    "password": "dumbways",
     "database": "wayshub",
-    "host": "127.0.0.1",
+    "host": "mysql",
     "dialect": "mysql"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "username": "abim",
+    "password": "dumbways",
+    "database": "wayshub",
+    "host": "mysql",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
+    "username": "abim",
+    "password": "dumbways",
+    "database": "wayshub",
+    "host": "mysql",
     "dialect": "mysql"
   }
 }
